--- a/ActivityFeed.Api/ActivityFeed.Api.csproj
+++ b/ActivityFeed.Api/ActivityFeed.Api.csproj
@@ -105,6 +105,8 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="packages.config" />
+    <Content Include="ClassDiagram1.cd" />
+    <Content Include="Graph1.dgml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -129,13 +131,13 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ActivityFeed.ClientApi\ActivityFeed.ClientApi.csproj">
+      <Project>{24B6FD68-10CA-4385-9A3F-B9926547DC36}</Project>
+      <Name>ActivityFeed.ClientApi</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ActivityFeed.DomainModel\ActivityFeed.DomainModel.csproj">
       <Project>{F174A372-98C8-473F-BE87-6BCC8E7F823C}</Project>
       <Name>ActivityFeed.DomainModel</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ActivityFeed.Messages\ActivityFeed.Messages.csproj">
-      <Project>{5C173882-219A-4781-982A-661CB371B357}</Project>
-      <Name>ActivityFeed.Messages</Name>
     </ProjectReference>
     <ProjectReference Include="..\Bcl.Azure.ServiceBus\Bcl.Azure.ServiceBus.csproj">
       <Project>{659379EF-FDB8-4CB0-B497-EBA9376CF140}</Project>
