--- a/ActivityFeed.Messages/ActivityFeed.Messages.csproj
+++ b/ActivityFeed.Messages/ActivityFeed.Messages.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NewsActivityFeed.cs" />
     <Compile Include="CreateActivityFeedEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
