Added worker and TableStorage

--- a/ActivityFeed.Api/ActivityFeed.Api.csproj
+++ b/ActivityFeed.Api/ActivityFeed.Api.csproj
@@ -105,8 +105,6 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="packages.config" />
-    <Content Include="ClassDiagram1.cd" />
-    <Content Include="Graph1.dgml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -118,7 +116,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Api\ActivitiesController.cs" />
+    <Compile Include="Controllers\ActivitiesController.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -128,7 +126,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ActivityFeed.ClientApi\ActivityFeed.ClientApi.csproj">
