--- a/ActivityFeed.CloudService.Worker/ActivityFeed.CloudService.Worker.csproj
+++ b/ActivityFeed.CloudService.Worker/ActivityFeed.CloudService.Worker.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{6C781AB1-6EF5-4E30-873C-1508B224230C}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ActivityFeed.CloudService.Worker</RootNamespace>
     <AssemblyName>ActivityFeed.CloudService.Worker</AssemblyName>
@@ -30,6 +30,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Azure.KeyVault.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -61,8 +64,8 @@
       <HintPath>..\packages\WindowsAzure.Storage.7.0.0\lib\net40\Microsoft.WindowsAzure.Storage.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -84,6 +87,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkerRole.cs" />
   </ItemGroup>
@@ -95,6 +99,10 @@
     <ProjectReference Include="..\ActivityFeed.ClientApi\ActivityFeed.ClientApi.csproj">
       <Project>{24B6FD68-10CA-4385-9A3F-B9926547DC36}</Project>
       <Name>ActivityFeed.ClientApi</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ActivityFeed.Messages\ActivityFeed.Messages.csproj">
+      <Project>{5c173882-219a-4781-982a-661cb371b357}</Project>
+      <Name>ActivityFeed.Messages</Name>
     </ProjectReference>
     <ProjectReference Include="..\ActivityFeed.Repositories\Bcl.Azure.Storage.csproj">
       <Project>{B8A5A47C-E936-4561-B801-78B3350E7FF8}</Project>
