--- a/ActivityFeed.Console/ActivityFeed.Console.csproj
+++ b/ActivityFeed.Console/ActivityFeed.Console.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{6C781AB1-6EF5-4E30-873C-1508B224230C}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ActivityFeed.CloudService.Worker</RootNamespace>
-    <AssemblyName>ActivityFeed.CloudService.Worker</AssemblyName>
+    <RootNamespace>ActivityFeed.Console</RootNamespace>
+    <AssemblyName>ActivityFeed.Console</AssemblyName>
     <ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <RoleType>Worker</RoleType>
@@ -60,8 +60,8 @@
       <HintPath>..\packages\Microsoft.WindowsAzure.ConfigurationManager.2.0.3\lib\net40\Microsoft.WindowsAzure.Configuration.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.WindowsAzure.Storage, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\WindowsAzure.Storage.7.0.0\lib\net40\Microsoft.WindowsAzure.Storage.dll</HintPath>
+    <Reference Include="Microsoft.WindowsAzure.Storage, Version=7.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\WindowsAzure.Storage.7.2.1\lib\net40\Microsoft.WindowsAzure.Storage.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -89,7 +89,6 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WorkerRole.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -99,6 +98,10 @@
     <ProjectReference Include="..\ActivityFeed.ClientApi\ActivityFeed.ClientApi.csproj">
       <Project>{24B6FD68-10CA-4385-9A3F-B9926547DC36}</Project>
       <Name>ActivityFeed.ClientApi</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ActivityFeed.DomainModel\ActivityFeed.DomainModel.csproj">
+      <Project>{F174A372-98C8-473F-BE87-6BCC8E7F823C}</Project>
+      <Name>ActivityFeed.DomainModel</Name>
     </ProjectReference>
     <ProjectReference Include="..\ActivityFeed.Messages\ActivityFeed.Messages.csproj">
       <Project>{5c173882-219a-4781-982a-661cb371b357}</Project>
