--- a/ActivityFeed.IntegrationTests/ActivityFeed.IntegrationTests.csproj
+++ b/ActivityFeed.IntegrationTests/ActivityFeed.IntegrationTests.csproj
@@ -117,13 +117,9 @@
       <Project>{6c781ab1-6ef5-4e30-873c-1508b224230c}</Project>
       <Name>ActivityFeed.Console</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ActivityFeed.DomainModel\ActivityFeed.DomainModel.csproj">
+    <ProjectReference Include="..\ActivityFeed.DomainModel\ActivityFeed.Domain.csproj">
       <Project>{f174a372-98c8-473f-be87-6bcc8e7f823c}</Project>
-      <Name>ActivityFeed.DomainModel</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ActivityFeed.Messages\ActivityFeed.Messages.csproj">
-      <Project>{5c173882-219a-4781-982a-661cb371b357}</Project>
-      <Name>ActivityFeed.Messages</Name>
+      <Name>ActivityFeed.Domain</Name>
     </ProjectReference>
     <ProjectReference Include="..\Bcl.Azure.ServiceBus\Bcl.Azure.ServiceBus.csproj">
       <Project>{659379ef-fdb8-4cb0-b497-eba9376cf140}</Project>
