--- a/ActivityFeed.ClientApi.Tests/ActivityFeed.ClientApi.IntegrationTests.csproj
+++ b/ActivityFeed.ClientApi.Tests/ActivityFeed.ClientApi.IntegrationTests.csproj
@@ -70,9 +70,9 @@
       <Project>{24B6FD68-10CA-4385-9A3F-B9926547DC36}</Project>
       <Name>ActivityFeed.ClientApi</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ActivityFeed.Messages\ActivityFeed.Messages.csproj">
-      <Project>{5C173882-219A-4781-982A-661CB371B357}</Project>
-      <Name>ActivityFeed.Messages</Name>
+    <ProjectReference Include="..\ActivityFeed.DomainModel\ActivityFeed.Domain.csproj">
+      <Project>{F174A372-98C8-473F-BE87-6BCC8E7F823C}</Project>
+      <Name>ActivityFeed.Domain</Name>
     </ProjectReference>
     <ProjectReference Include="..\Bcl.Azure.ServiceBus\Bcl.Azure.ServiceBus.csproj">
       <Project>{659379EF-FDB8-4CB0-B497-EBA9376CF140}</Project>
