--- a/ActivityFeed.Repositories/Bcl.Azure.Storage.csproj
+++ b/ActivityFeed.Repositories/Bcl.Azure.Storage.csproj
@@ -68,6 +68,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseEntity.cs" />
+    <Compile Include="IStorage.cs" />
     <Compile Include="TableStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
