--- a/Bcl.Azure.ServiceBus/Bcl.Messaging.csproj
+++ b/Bcl.Azure.ServiceBus/Bcl.Messaging.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{659379EF-FDB8-4CB0-B497-EBA9376CF140}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bcl.Azure.ServiceBus</RootNamespace>
-    <AssemblyName>Bcl.Azure.ServiceBus</AssemblyName>
+    <RootNamespace>Bcl.Messaging</RootNamespace>
+    <AssemblyName>Bcl.Messaging</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
