--- a/Bcl.Repositories/Bcl.Repositories.csproj
+++ b/Bcl.Repositories/Bcl.Repositories.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Entities\ActivityFeedEntity.cs" />
     <Compile Include="DataTransferObjects\ActivityFeedDto.cs" />
     <Compile Include="AzureTableStorageRepository.cs" />
+    <Compile Include="IMessage.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
