--- a/ActivityFeed.Console/ActivityFeed.WorkerConsoleHost.csproj
+++ b/ActivityFeed.Console/ActivityFeed.WorkerConsoleHost.csproj
@@ -89,6 +89,10 @@
       <Project>{659379ef-fdb8-4cb0-b497-eba9376cf140}</Project>
       <Name>Bcl.Messaging</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Bcl.Core\Bcl.Core.csproj">
+      <Project>{4c85cb42-404a-4cf0-b4ca-c654ea435aff}</Project>
+      <Name>Bcl.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Bcl.Repositories\ActivityFeed.Repositories.csproj">
       <Project>{B312753C-F02C-4BB5-A876-92EEF1202A13}</Project>
       <Name>ActivityFeed.Repositories</Name>
